Update website content and styling: replaced logo across multiple pages, added course links, and improved contact form functionality. Removed developer info and mail handler files. Enhanced CSS for success and error messages.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2575,6 +2575,14 @@ footer .bottom-footer .social-links {
     margin-bottom: 20px;
     color: #fff !important;
 }
+
+.success {
+    background: #28a745;
+    padding: 10px;
+    margin-bottom: 20px;
+    color: #fff !important;
+    border-radius: 5px;
+}
 .failed img,
 .text-info img {
     margin-right: 10px;
